# synthetic-data-generation-using-genAI

./: README.md  data_gen_utils.py  explore.ipynb  explore.py  pyproject.toml
src/: explore.ipynb
