[project]
name = "synthetic-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Briac Le Guillou",email = "briacleguilloux@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (==2.1.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
